Fix weird bug making the width too wide in the header warning.

--- a/hh-server/heart_health/templates/media/css/custom.css
+++ b/hh-server/heart_health/templates/media/css/custom.css
@@ -326,10 +326,6 @@ li {
 
 /* Large desktop */
 @media (min-width: 1200px) {
-    #testing-warning {
-        width: 100%;
-    }
-
     .user-dropdown {
         float: right !important;
     }
